--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
       <li><a href="./partials/02-timer.html">Countdown timer</a></li>
       <li><a href="./partials/03-promises.html">Promise generator</a></li>
     </ul>
+    <script src="./index.js"></script>
   </body>
 </html>
